# C-Printf

./: CMakeLists.txt  README.md  _print.c  _printf.c  _putchar.c  converter.c  get_flag.c  get_print.c  main.c  main.h  man_3_printf  print.c  printChar.c  printStr.c  printString.c  print_37.c  print_HEX.c  print_address.c  print_alpha.c  print_bases.c  print_bin.c  print_custom.c  print_exclusive_string.c  print_nums.c  printf.c  printf_HEX_aux.c  printf_int.c  printf_oct.c  printf_pointer.c  printf_rot13.c  printf_srev.c  printf_unsigned.c  test.c  write_funcs.c
include/: main.h
src/: _putchar.c  converter.c  get_flag.c  get_print.c  printChar.c  printStr.c  printString.c  print_address.c  print_alpha.c  print_bases.c  print_custom.c  print_nums.c  write_funcs.c
